lade till eventlistener

--- a/style.css
+++ b/style.css
@@ -318,25 +318,30 @@ footer {
 /* --------------------- shoppingCart och overlay --------------------- */
 
 .overlay {
-    display: none; /* Dold till en början */
-    position: fixed; /* Stannar på plats när man scrollar */
-    width: 100%;
+    display: none; 
+    position: fixed; 
+    width: 50%;
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.5); /* Halvgenomskinlig svart */
-    z-index: 1; /* Säkerställer att den ligger över andra element */
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1000; 
 }
 
 .shopping-cart {
-    display: none; /* Dold till en början */
+    display: none; 
     position: fixed;
     top: 0;
     right: 0;
-    width: 50%; /* Tar upp halva skärmen */
+    width: 50%; 
     height: 100%;
     background-color: white;
     padding: 20px;
-    box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.5); /* Lägger till skugga */
-    z-index: 2; /* Säkerställer att den ligger över overlay */
+    box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.5); 
+    z-index: 1500; 
+}
+
+.sticky-top {
+    z-index: 500; 
+    position: relative; 
 }
