--- a/style.css
+++ b/style.css
@@ -315,31 +315,6 @@ footer {
     height: initial;
 }
 
-/* --------------------- shoppingCart och overlay --------------------- */
-
-.overlay {
-    display: none; 
-    position: fixed; 
-    width: 50%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5); 
-    z-index: 1000; 
-}
-
-.shopping-cart {
-    display: none; 
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 50%; 
-    height: 100%;
-    background-color: white;
-    padding: 20px;
-    box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.5); 
-    z-index: 1500; 
-}
 
 .sticky-top {
     z-index: 500; 
@@ -351,3 +326,35 @@ footer {
     height: auto; 
     display: block; 
 }
+
+.right-aligned-modal {
+    position: fixed;
+    top: 0; 
+    right: 0; 
+    height: 100vh; 
+    transform: none; 
+    width: 500px;
+  
+  }
+
+
+  .modal-header, .modal-footer {
+    background-color: #f3ede6;
+    height: 15%;
+  }
+
+  .total-text {
+    text-align: left;
+    
+  }
+
+/* --------------------- om innehållet överstiger höjden --------------------- */
+
+  .right-aligned-modal .modal-body { /*---  scollbar  ---*/
+    overflow-y: auto; 
+  
+  }
+
+  .right-aligned-modal .modal-content {
+    height: 95%;
+  }
